Existencias Talla mas id
